[package]
name = "expanding_slice_rb"
version = "0.2.0"
authors = ["Billy Messenger <60663878+BillyDM@users.noreply.github.com>"]
edition = "2021"
license = "MIT"
keywords = ["ring", "circular", "queue", "vecdeque", "slice"]
categories = ["data-structures", "no-std"]
description = "A self-expanding ring buffer similar to VecDeque optimized for working with slices of data"
repository = "https://github.com/BillyDM/expanding_slice_rb"
documentation = "https://docs.rs/expanding_slice_rb"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slice_ring_buf = "0.3"